--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title><b>PITTI KING</b></title>
 </head>
 <body>
-これは私の最初のホームページです。
+<img src="head.png" width="88" height="88" alt="welcome">
+<br><br>
+これは私の最初のホームページです。<br>
 </body>
 </html>
