--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>pittiking.github.io</title>
 </head>
 <body>
-  <h1>Fukui Hirotakaのホームページ</h1><br>
-これは私の最初のホームページです。<br>
+  <h1>Fukui Hirotakaのホームページ</h1>
+これは私の最初のホームページです。
 </body>
 </html>
