--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <title>pittiking.github.io</title>
 </head>
 <body>
+ <img src="githubimage.png"
+ width="210" height="88" alt="welcome">
+<br><br>
   <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
-これは私の最初のホームページです。
+これはホームページです。
 </body>
 </html>
