--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
  <img src="githubimage.png"
- width="210" height="88" alt="welcome">
+ alt="welcome">
 <br><br>
   <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
 これはホームページです。
