--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
 これはホームページです。
 <br><br>
-<script>Z=X=[B=A=12];function Y(){for(C
+<body id=P onKeyDown=K=event.keyCode-38><script>Z=X=[B=A=12];function Y(){for(C
 =[q=c=i=4];f=i--*K;c-=!Z[h+(K+6?p+K:C[i]=p*A-(p/9|0)*145)])p=B[i];for(c?0:K+6?h
 +=K:t?B=C:0;i=K=q--;f+=Z[A+p])k=X[p=h+B[q]]=1;if(e=!e)if(h+=A,f|B)for(Z=X,X=[l=
 228],B=[[-7,-20,6,h=17,-9,3,3][t=++t%7]-4,0,1,t-6?-A:2];l--;)for(l%A?l-=l%A*!Z[
