--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
 これはホームページです。
 <br><br>
+<marquee direction="right" width="300">左から右へ「スクロール」</marquee>
+<marquee width="300">右から左へ「スクロール」</marquee>
+<marquee behavior="alternate" width="300">左右に揺れる「スライド」</marquee>
+<marquee behavior="slide" width="300">端で消える「交互」</marquee>
+<br><br>
 <p id=D onKeyDown=K=event.keyCode-38><script>Z=X=[B=A=12];function Y(){for(C
 =[q=c=i=4];f=i--*K;c-=!Z[h+(K+6?p+K:C[i]=p*A-(p/9|0)*145)])p=B[i];for(c?0:K+6?h
 +=K:t?B=C:0;i=K=q--;f+=Z[A+p])k=X[p=h+B[q]]=1;if(e=!e)if(h+=A,f|B)for(Z=X,X=[l=
