--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
 これはホームページです。
 <br><br>
-<marquee direction="right" width="300">左から右へ「スクロール」</marquee>
-<marquee width="300">右から左へ「スクロール」</marquee>
-<marquee behavior="alternate" width="300">左右に揺れる「スライド」</marquee>
-<marquee behavior="slide" width="300">端で消える「交互」</marquee>
+<marquee direction="right" width="300">Nevakhi vekha ha maan: Rekke, m'aresakea norethi fitte</marquee>
+<marquee width="300">nuqDaq 'oH puchpa''e'</marquee>
 <br><br>
 <p id=D onKeyDown=K=event.keyCode-38><script>Z=X=[B=A=12];function Y(){for(C
 =[q=c=i=4];f=i--*K;c-=!Z[h+(K+6?p+K:C[i]=p*A-(p/9|0)*145)])p=B[i];for(c?0:K+6?h
