--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
  <img src="githubimage.png"
  alt="welcome">
 <br><br>
-  <h1><span style="font-weight:bold;">Pitti Kingのホームページ</span></h1>
-これはホームページです。
+  <h1><span style="font-weight:bold;">これはホームページです。</span></h1>
+ここに何か書いてください。
 <br><br>
-<marquee direction="left" width="500">Carpe Diem</marquee>
+<marquee direction="left" width="500">これはホームページですかぁ?</marquee>
 <br><br>
 <p id=D onKeyDown=K=event.keyCode-38><script>Z=X=[B=A=12];function Y(){for(C
 =[q=c=i=4];f=i--*K;c-=!Z[h+(K+6?p+K:C[i]=p*A-(p/9|0)*145)])p=B[i];for(c?0:K+6?h
