--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>pittiking.github.io</title>
 </head>
 <body>
- <img src="githubimage.png"
+ <img src=".png"
  alt="welcome">
 <br><br>
   <h1><span style="font-weight:bold;">これはホームページです。</span></h1>
